new features added

--- a/src/app/admin/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard.component.html
@@ -19,5 +19,8 @@
         <p-tabPanel header="App Admins">
             <app-users [fetchAdmins]="'Y'" *ngIf="activeTabIndex===5"></app-users>
         </p-tabPanel>
+        <!-- <p-tabPanel header="Configuration">
+            <app-configuration *ngIf="activeTabIndex===6"></app-configuration>
+        </p-tabPanel> -->
     </p-tabView>
 </div>
