--- a/src/app/user/user-dashboard.component.html
+++ b/src/app/user/user-dashboard.component.html
@@ -7,56 +7,38 @@
 </div> -->
 <div class="grid">
     <div class="col-3">
-        <p-card header="Welcome, {{ userName }}" styleClass="p-shadow-4">
-            <!-- <ng-template pTemplate="header">
-                <div class="p-text-center p-text-bold">
-                    User Details
-                </div>
-            </ng-template> -->
+        <p-card header="Investment Summary" styleClass="p-shadow-4">
             <ng-template pTemplate="content">
-                <!-- <div class="p-d-flex p-flex-column p-ai-center p-py-2">
-                    <p><strong><span>Total Invested Amount:</span></strong> {{ 5000 | currency }}</p>
-                    <p><strong><span>Rate of Interest:</span></strong> {{ 5 }}%</p>
-                    <p><strong>Investment Tenure:</strong> 2 years</p>
-                </div> -->
                 <div class="form-row">
-                    <label class="form-label">Total Invested Amount:</label>
-                    <span>{{ 5000 | currency }}</span>
+                    <label class="form-label">Total Investment:</label>
+                    <span>{{ userStats.totalInvestment || 0 | currency }}</span>
                 </div>
                 <div class="form-row">
-                    <label class="form-label">Rate of Interest:</label>
-                    <span>{{ 5 }}%</span>
+                    <label class="form-label">No of Dividends Paid:</label>
+                    <span>{{ userStats.numberOfDividendsPaid || 0}}</span>
                 </div>
                 <div class="form-row">
-                    <label class="form-label">Investment Tenure:</label>
-                    <span>2 years</span>
+                    <label class="form-label">Dividends total:</label>
+                    <span>{{ userStats.totalDividendsPaid || 0 | currency }}</span>
                 </div>
+                <div class="form-row">
+                    <label class="form-label">Return on Investment:</label>
+                    <span>{{ userStats.returnOnInvestment }}%</span>
+                </div>
+                <div class="form-row">
+                    <label class="form-label">Return of Capital:</label>
+                    <span>{{ userStats.returnOfCapital }}%</span>
+                </div>
+
             </ng-template>
         </p-card>
     </div>
     <div class="col-3">
-        <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+        <!-- <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
             style="width: 100%; height: 220px; display: block;" [(update)]="updatePieChartFlag">
-        </highcharts-chart>
+        </highcharts-chart> -->
     </div>
     <div class="col-12">
-        <!-- <div class="card">
-            <p-panel [toggleable]="true">
-                <ng-template pTemplate="header">
-                    <div class="flex align-items-center gap-2">
-                        <span class="font-bold">
-                            Investments Summary
-                        </span>
-                    </div>
-                </ng-template>
-                <ng-template pTemplate="icons">
-                    <button class="p-panel-header-icon p-link mr-2">
-                        <span class="pi pi-refresh"></span>
-                    </button>
-                </ng-template>
-
-            </p-panel>
-        </div> -->
         <div class="card">
             <p-table #userTransactionsGrid [value]="userTransactions" [paginator]="true" [rows]="10"
                 responsiveLayout="scroll" [globalFilterFields]="['amount', 'portfolioName']">
