--- a/src/app/user/user-dashboard.component.scss
+++ b/src/app/user/user-dashboard.component.scss
@@ -2,10 +2,13 @@
     display: flex;
     // justify-content: flex-end;
     gap: 10px;
-    margin-bottom: 8px;
 }
 
 .form-label {
     font-weight: bold;
     text-align: right;
+}
+
+:host ::ng-deep .p-card .p-card-content {
+    padding: 0rem;
 }
