--- a/src/app/admin/user-transactions/user-transactions.component.html
+++ b/src/app/admin/user-transactions/user-transactions.component.html
@@ -68,7 +68,12 @@
                     <td>{{transaction.transactionCategory}}</td>
                     <td>{{transaction.paymentMode}}</td>
                     <td><p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" [outlined]="true" severity="success"
-                            (onClick)="editTransaction(transaction)" /></td>
+                            (onClick)="editTransaction(transaction)" />
+                        <button pButton pRipple type="button" icon="pi pi-trash"
+                            (click)="deleteTransaction(transaction)" pTooltip="Delete"
+                            class="p-button-rounded p-button-text p-button-danger">
+                        </button>
+                    </td>
                 </tr>
             </ng-template>
         </p-table>
@@ -83,7 +88,7 @@
                 <div class="field col">
                     <label for="user">User</label>
                     <app-user-dropdown id="user" name="user" (emitSelectedUser)="setUserDetails($event)"
-                        *ngIf="!isEditMode"></app-user-dropdown>
+                        *ngIf="!isEditMode" [userIdFromContext]="userFromContext.userId"></app-user-dropdown>
                     <input type="text" pInputText id="user" name="user" [ngModel]="userTransaction.userName"
                         *ngIf="isEditMode" disabled />
                 </div>
@@ -100,12 +105,13 @@
                     <label for="transactionTypeId">Transaction Type</label>
                     <p-dropdown [options]="lookupData.transactionTypes" name="transactionTypeId"
                         [(ngModel)]="userTransaction.transactionTypeId" optionLabel="transactionTypeName"
-                        optionValue="transactionTypeId" placeholder="Select Transaction Type" appendTo="body">
+                        optionValue="transactionTypeId" placeholder="Select Transaction Type" appendTo="body"
+                        [showClear]="true" (onChange)="filterCategories()">
                     </p-dropdown>
                 </div>
                 <div class="field col">
                     <label for="transactionCategoryId">Transaction Category</label>
-                    <p-dropdown [options]="lookupData.transactionCategories" name="transactionCategoryId"
+                    <p-dropdown [options]="filteredCategories" name="transactionCategoryId"
                         [(ngModel)]="userTransaction.transactionCategoryId" optionLabel="transactionCatgName"
                         optionValue="transactionCatgId" placeholder="Select Category" appendTo="body">
                     </p-dropdown>
@@ -128,8 +134,8 @@
             </div>
             <div class="field">
                 <label for="remarks">Remarks</label>
-                <textarea id="remarks" name="remarks" pInputTextarea [(ngModel)]="userTransaction.remarks" required
-                    rows="3" cols="20">
+                <textarea id="remarks" name="remarks" pInputTextarea [(ngModel)]="userTransaction.remarks" rows="3"
+                    cols="20">
                 </textarea>
             </div>
 
