--- a/src/app/admin/users/users.component.scss
+++ b/src/app/admin/users/users.component.scss
@@ -6,3 +6,7 @@ th {
 :host ::ng-deep .p-button.p-button-icon-only.p-button-rounded {
     border-radius: 50%;
 }
+
+.text-danger {
+    color: red;
+}
