--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,18 +11,19 @@
                 leaveToClass="hidden" [hideOnOutsideClick]="true">
                 <i class="pi pi-bars text-4xl"></i>
             </a>
-            <div class="align-items-center surface-0 flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2"
+            <div #mobileMenu
+                class="align-items-center surface-0 flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2"
                 style="top:120px">
                 <ul
                     class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
                     <li>
-                        <a (click)="router.navigate(['/'])" pRipple
+                        <a (click)="navigateAndClose('/')" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a (click)="router.navigate(['/kares/aboutUs'])" pRipple
+                        <a (click)="navigateAndClose('/kares/aboutUs')" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>About Us</span>
                         </a>
@@ -30,7 +31,7 @@
                 </ul>
                 <div
                     class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-                    <button pButton pRipple label="Already a member? Login" [routerLink]="['/kares/login']"
+                    <button pButton pRipple label="Already a member? Login" (click)="navigateAndClose('/kares/login')"
                         class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
                     <!-- <button pButton pRipple label="Register"
                         class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button> -->
@@ -38,82 +39,6 @@
             </div>
         </div>
         <router-outlet></router-outlet>
-        <!-- <div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
-            style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EEEFAF 0%, #C3E3FA 100%);">
-            <div class="mx-4 md:mx-8 mt-0 md:mt-4">
-                <p class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700">Whether you are just starting on
-                    your financial journey or looking for more sophisticated wealth management strategies, KARES
-                    INVESTMENTS is here to guide you every step of the way.</p>
-                <button pButton pRipple type="button" label="Contact Us" style="margin-bottom:10px; border-radius: 5px"
-                    [routerLink]="'/register'"
-                    class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
-            </div>
-        </div> -->
 
-        <!-- <div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
-            <div class="grid justify-content-center">
-                <div class="col-12 text-center mt-8 mb-4">
-                    <h2 class="text-900 font-normal mb-2">Why Choose Kares Investments</h2>
-                </div>
-
-                <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
-                    <div
-                        style="height:200px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(253, 228, 165, 0.2),rgba(187, 199, 205, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2),rgba(187, 199, 205, 0.2));">
-                        <div class="p-3 surface-card h-full" style="border-radius:8px;">
-                            <div class="flex align-items-center justify-content-center bg-yellow-200 mb-3"
-                                style="width:3.5rem;height:3.5rem; border-radius:10px;">
-                                <i class="pi pi-fw pi-users text-2xl text-yellow-700"></i>
-                            </div>
-                            <h5 class="mb-2 text-900">Personalized Service</h5>
-                            <span class="text-600">We recognize that every client is unique. Our individualized approach
-                                ensures that your financial plan is designed specifically to meet your needs and
-                                goals.</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
-                    <div
-                        style="height:200px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145,226,237,0.2),rgba(251, 199, 145, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2), rgba(172, 180, 223, 0.2));">
-                        <div class="p-3 surface-card h-full" style="border-radius:8px;">
-                            <div class="flex align-items-center justify-content-center bg-cyan-200 mb-3"
-                                style="width:3.5rem;height:3.5rem; border-radius:10px;">
-                                <i class="pi pi-fw pi-palette text-2xl text-cyan-700"></i>
-                            </div>
-                            <h5 class="mb-2 text-900">Commitment to Excellence</h5>
-                            <span class="text-600">We are committed to providing exceptional service and delivering
-                                results that help our clients achieve financial independence and peace of mind.</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 md:col-12 lg:col-4 p-0 lg:pb-5 mt-4 lg:mt-0">
-                    <div
-                        style="height:200px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 226, 237, 0.2), rgba(172, 180, 223, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(246, 158, 188, 0.2));">
-                        <div class="p-3 surface-card h-full" style="border-radius:8px;">
-                            <div class="flex align-items-center justify-content-center bg-indigo-200"
-                                style="width:3.5rem;height:3.5rem; border-radius:10px;">
-                                <i class="pi pi-fw pi-map text-2xl text-indigo-700"></i>
-                            </div>
-                            <h5 class="mb-2 text-900">Client-Centric Approach</h5>
-                            <span class="text-600">Your success is our top priority. We take the time to listen,
-                                understand, and craft a plan that supports your vision for the future.</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 mt-8 mb-8 p-2 md:p-8"
-                    style="border-radius:20px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EFE1AF 0%, #C3DCFA 100%);">
-                    <div
-                        class="flex flex-column justify-content-center align-items-center text-center px-3 py-3 md:py-0">
-                        <h3 class="text-gray-900 mb-2">Kares Investments</h3>
-                        <span class="text-gray-600 text-1xl">Your Partner in Financial Growth</span>
-                        <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-4"
-                            style="max-width:800px;">“Some Text about The Company”</p>
-                        <img src="assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo">
-
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </div>
 </div>
