new landing page changes

--- a/src/app/admin/admin-home/admin-home.component.scss
+++ b/src/app/admin/admin-home/admin-home.component.scss
@@ -16,3 +16,10 @@
 :host ::ng-deep .p-card .p-card-content {
     padding: 0rem;
 }
+
+:host ::ng-deep .p-card {
+    background: var(--surface-card);
+    border: 1px solid rgb(63, 75, 91) !important;
+    border-radius: 12px !important;
+    margin-left: 10px;
+}
