--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,12 +1,8 @@
-<div class="surface-ground flex align-items-center justify-content-center min-w-screen overflow-hidden">
+<!-- <div class="surface-ground flex align-items-center justify-content-center min-w-screen overflow-hidden">
     <div class="flex flex-column align-items-center justify-content-center">
-        <!-- <img src="assets/layout/images/kares-logo2.png" alt="Kares logo" style="width: 150px; height: auto;"> -->
         <div
             style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
-                <!-- <p *ngIf="validationErrors.length > 0" class='text-center'>
-                    <small class='text-danger'>{{validationErrors}}</small> class="mb-5 w-6rem flex-shrink-0"
-                </p> -->
                 <div>
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
                     <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5"
@@ -15,5 +11,25 @@
                 <button pButton label="Reset Password" class="w-full p-3 text-xl" (click)="resetPassword()"></button>
             </div>
         </div>
+    </div>
+</div> -->
+
+<div class="flex align-items-center justify-content-center  pt-6-rem">
+    <div class="flex flex-column align-items-center justify-content-center">
+
+        <div class="bg-gradient-rounded p-3">
+            <div class="card-container py-6 px-4">
+                <div class="mb-2">
+                    <!-- <label for="email1" class="text-xl font-medium mb-2">Email</label>
+            <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem" [(ngModel)]="email"> -->
+                    <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
+                    <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5"
+                        style="padding:1rem" [(ngModel)]="email">
+                </div>
+
+                <button pButton label="Reset Password" class="w-full p-3 text-xl" (click)="resetPassword()"></button>
+            </div>
+        </div>
+
     </div>
 </div>
