--- a/src/app/landing2/home2/home2.component.html
+++ b/src/app/landing2/home2/home2.component.html
@@ -3,7 +3,7 @@
     <div class="hero-section">
         <h1 class="display-4">Smart Finance for a Better Future</h1>
         <p class="lead">Secure, seamless, and innovative financial solutions at your fingertips.</p>
-        <button class="btn btn-primary btn-lg m-2">Sign Up Now</button>
+        <button class="btn btn-primary btn-lg m-2" [routerLink]="'/register'">Begin Your Smart Investing</button>
         <button class="btn btn-outline-light btn-lg m-2" [routerLink]="'/about'">Learn More</button>
     </div>
 
