--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,34 +31,24 @@
 
         <div class="bg-gradient-rounded p-3">
             <div class="card-container py-6 px-4">
-
-                <!-- Email Input Section -->
+                <h2 class="text-3xl font-bold text-center mb-4">Sign In</h2>
                 <div class="mb-2">
-                    <!-- <label for="email1" class="text-xl font-medium mb-2">Email</label>
-                    <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem"
-                        [(ngModel)]="email"> -->
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
-                    <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5"
+                    <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem"
                         style="padding:1rem" [(ngModel)]="email">
                 </div>
 
-                <!-- Password Input Section -->
                 <div class="mb-2">
-                    <!-- <label for="password1" class="font-medium text-xl mb-2">Password</label>
-                    <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true"
-                        inputStyleClass="w-full md:w-30rem p-3" (keydown.enter)="login()"></p-password> -->
                     <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
                     <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true"
                         styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"
                         (keydown.enter)="login()"></p-password>
                 </div>
 
-                <!-- Forgot Password Link Section -->
                 <div class="flex justify-content-between mb-2">
                     <a class="text-primary cursor-pointer" [routerLink]="['/forgotpassword']">Forgot password?</a>
                 </div>
 
-                <!-- Sign In Button Section -->
                 <div class="mb-4">
                     <button pButton label="Sign In" class="w-full p-3 text-xl" (click)="login()"></button>
                 </div>
