--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,8 @@
-<div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
+<!-- <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
     <div class="flex flex-column align-items-center justify-content-center">
-        <!-- <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">                 -->
         <div
             style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
-                <!-- <div class="text-center mb-5">
-                    <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
-                    <span class="text-600 font-medium">Sign in to continue</span>
-                </div> -->
                 <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
 
                     <div class="form-group mb-5">
@@ -62,6 +56,70 @@
                 </form>
             </div>
         </div>
+    </div>
+</div> -->
+
+<div class="flex align-items-center justify-content-center pt-6-rem">
+    <div class="flex flex-column align-items-center justify-content-center">
+
+        <div class="bg-gradient-rounded p-3">
+            <div class="card-container py-6 px-4">
+                <h2 class="text-3xl font-bold text-center mb-4">Let's Connect</h2>
+                <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
+
+                    <div class="mb-2">
+                        <label for="firstName" class="block text-900 text-l font-medium mb-2">First Name</label>
+                        <input id="firstName" name="firstName" [(ngModel)]="model.firstName" required minlength="2"
+                            #fName="ngModel" type="text" placeholder="First Name" pInputText class="w-full md:w-30rem"
+                            style="padding:0.5rem">
+                        <div *ngIf="fName.invalid && fName.touched" class="text-danger">
+                            <small>First Name is required and must be at least 2 characters.</small>
+                        </div>
+                    </div>
+
+                    <div class="mb-2">
+                        <label for="lastName" class="block text-900 text-l font-medium mb-2">Last Name</label>
+                        <input id="lastName" name="lastName" [(ngModel)]="model.lastName" required minlength="2"
+                            #lName="ngModel" type="text" placeholder="Last Name" pInputText class="w-full md:w-30rem"
+                            style="padding:0.5rem">
+                        <div *ngIf="lName.invalid && lName.touched" class="text-danger">
+                            <small>Last Name is required and must be at least 2 characters.</small>
+                        </div>
+                    </div>
+
+                    <div class="mb-2">
+                        <label for="mobileNum" class="block text-900 text-l font-medium mb-2">Mobile #</label>
+                        <input id="mobileNum" name="mobileNum" [(ngModel)]="model.mobileNum" required #mob="ngModel"
+                            type="text" placeholder="Mobile #" pInputText class="w-full md:w-30rem" pattern="^\d{10}$"
+                            style="padding:0.5rem">
+                        <div *ngIf="mob.invalid && mob.touched" class="text-danger">
+                            <small>Mobile number is required and must be a valid 10-digit number.</small>
+                        </div>
+                    </div>
+
+                    <div class="mb-2">
+                        <label for="email" class="block text-900 text-l font-medium mb-2">Email</label>
+                        <input id="email" name="email" [(ngModel)]="model.email" required #emailId="ngModel" type="text"
+                            email placeholder="Email" pInputText class="w-full md:w-30rem" style="padding:0.5rem">
+                        <div *ngIf="emailId.invalid && emailId.touched" class="text-danger">
+                            <small>Email is required and must be a valid email address.</small>
+                        </div>
+                    </div>
+
+                    <div class="mb-2">
+                        <label for="remarks" class="block text-900 text-l font-medium mb-2">Comments</label>
+                        <textarea id="remarks" name="remarks" [(ngModel)]="model.remarks" #remarks="ngModel" type="text"
+                            placeholder="Comments" pInputText class="w-full md:w-30rem"
+                            style="padding:0.5rem"></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid"
+                        style="padding:1rem;">Send</button>
+                </form>
+
+            </div>
+        </div>
+
     </div>
 </div>
 
