--- a/src/app/landing2/home2/home2.component.html
+++ b/src/app/landing2/home2/home2.component.html
@@ -1,23 +1,11 @@
 <section class="home-container text-center pt-6-rem">
     <!-- Hero Section -->
     <div class="hero-section">
-        <h1 class="display-4">Smart Finance for a Better Future</h1>
+        <h1 class="display-4">Smart Investments for a Secure Future</h1>
         <p class="lead">Secure, seamless, and innovative financial solutions at your fingertips.</p>
         <button class="btn btn-primary btn-lg m-2" [routerLink]="'/register'">Begin Your Smart Investing</button>
         <button class="btn btn-outline-light btn-lg m-2" [routerLink]="'/about'">Learn More</button>
     </div>
-
-    <!-- About Section -->
-    <!-- <div id="about" class="about-section text-center py-5">
-        <h2 class="display-5">About KARES Investments</h2>
-        <p class="lead px-4">
-            At KARES Investments, we are committed to helping individuals and families achieve their financial goals
-            through personalized and comprehensive financial strategies. Our mission is to generate regular income
-            for our clients while building long-term partnerships founded on trust and transparency.
-        </p>
-    </div> -->
-
-    <!-- Features Section -->
     <div class="features-section row text-center justify-content-center py-5">
         <div *ngFor="let feature of features" class="col-md-3 p-3">
             <div class="card shadow-lg p-4 bounce-card">
