--- a/src/app/landing2/about2/about2.component.html
+++ b/src/app/landing2/about2/about2.component.html
@@ -40,7 +40,7 @@
 
     <div class="row justify-content-center">
         <!-- Commitment to Excellence -->
-        <div class="col-md-4 mb-4">
+        <div class="col-md-3 mb-3">
             <div class="card shadow-lg p-4 text-center">
                 <h5 class="mb-2 text-900 fw-bold">Commitment to Excellence</h5>
                 <span>We are committed to providing exceptional service and delivering results that
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Personalized Service -->
-        <div class="col-md-4 mb-4">
+        <div class="col-md-3 mb-3">
             <div class="card shadow-lg p-4 text-center">
                 <h5 class="mb-2 text-900 fw-bold">Personalized Service</h5>
                 <span>We recognize that every client is unique. Our individualized approach ensures
@@ -60,12 +60,20 @@
         </div>
 
         <!-- Client-Centric Approach -->
-        <div class="col-md-4 mb-4">
+        <div class="col-md-3 mb-3">
             <div class="card shadow-lg p-4 text-center">
                 <h5 class="mb-2 text-900 fw-bold">Client-Centric Approach</h5>
                 <span>Your success is our top priority. We take the time to listen, understand, and
                     craft
                     a plan that supports your vision for the future.</span>
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card shadow-lg p-4 text-center">
+                <h5 class="mb-2 text-900 fw-bold">Innovative Solutions</h5>
+                <span>We utilize advanced financial technologies to create solutions that drive efficiency and unlock
+                    opportunities for sustainable growth in your financial journey.</span>
             </div>
         </div>
     </div>
