--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -4,14 +4,14 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Users</span>
-                    <div class="text-900 font-medium text-xl">{{dashboardStats?.activeUsers}}</div>
+                    <div class="text-900 font-medium text-xl">{{dashboardStats.activeUsers}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-users text-blue-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">{{dashboardStats?.usersJoinedThisMonth}} new </span>
+            <span class="text-green-500 font-medium">{{dashboardStats.usersJoinedThisMonth}} new </span>
             <span class="text-500">since this month</span>
         </div>
     </div>
@@ -20,14 +20,16 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Investment amount</span>
-                    <div class="text-900 font-medium text-xl">$ {{dashboardStats?.totalInvestedAmount}}</div>
+                    <div class="text-900 font-medium text-xl"> {{dashboardStats.totalInvestedAmount | currencyFormat}}
+                    </div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-dollar text-orange-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">{{dashboardStats?.totalInvestedAmountThisMonth}} +</span>
+            <span class="text-green-500 font-medium">{{dashboardStats.totalInvestedAmountThisMonth | currencyFormat}}
+                +</span>
             <span class="text-500">since this month</span>
         </div>
     </div>
@@ -36,14 +38,14 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">User Transactions</span>
-                    <div class="text-900 font-medium text-xl">{{dashboardStats?.totalTransactions}}</div>
+                    <div class="text-900 font-medium text-xl">{{dashboardStats.totalTransactions}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-list text-cyan-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">{{dashboardStats?.transactionsThisMonth}} new</span>
+            <span class="text-green-500 font-medium">{{dashboardStats.transactionsThisMonth}} new</span>
             <span class="text-500">since this month</span>
         </div>
     </div>
@@ -52,14 +54,14 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">User Interests</span>
-                    <div class="text-900 font-medium text-xl">{{dashboardStats?.totalInterests}}</div>
+                    <div class="text-900 font-medium text-xl">{{dashboardStats.totalInterests}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-purple-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-comment text-purple-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">{{dashboardStats?.pendingInterests}} </span>
+            <span class="text-green-500 font-medium">{{dashboardStats.pendingInterests}} </span>
             <span class="text-500">pending</span>
         </div>
     </div>
@@ -74,7 +76,7 @@
             <ng-template pTemplate="content">
                 <div class="form-row">
                     <label class="form-label">Total Investment:</label>
-                    <span>{{ userStats.totalInvestment || 0 | currency }}</span>
+                    <span>{{ userStats.totalInvestment || 0 | currencyFormat}}</span>
                 </div>
                 <div class="form-row">
                     <label class="form-label">No of Dividends Paid:</label>
