--- a/src/assets/layout/styles/layout/layout.scss
+++ b/src/assets/layout/styles/layout/layout.scss
@@ -13,7 +13,7 @@
 
 .p-datatable .p-datatable-tbody>tr>td,
 th {
-    padding: 0.25rem 0.25rem !important;
+    padding: 0.1rem 0.1rem !important;
 }
 
 .p-tabview .p-tabview-panels {
@@ -31,4 +31,9 @@ th {
 
 .layout-main-container {
     padding: 5rem 1rem 1rem 4rem;
+}
+
+.p-confirm-dialog .p-dialog-footer button {
+    margin-right: 8px;
+    /* Adjust spacing */
 }
