--- a/src/app/landing2/home2/home2.component.html
+++ b/src/app/landing2/home2/home2.component.html
@@ -8,10 +8,18 @@
     </div>
     <div class="features-section row text-center justify-content-center py-5">
         <div *ngFor="let feature of features" class="col-md-3 p-3">
-            <div class="card shadow-lg p-4 bounce-card">
-                <i class="pi" [ngClass]="feature.icon" class="display-3 text-primary"></i>
+            <!-- <div class="card shadow-lg p-4 bounce-card">
+                <lucide-icon [size]="48" [name]="feature.icon" class="display-3 text-primary"></lucide-icon>
                 <h3 class="mt-3">{{ feature.title }}</h3>
+            </div> -->
+            <div class="card shadow-lg p-4 bounce-card text-center">
+                <lucide-icon [size]="48" [name]="feature.icon" class="display-3 text-primary"></lucide-icon>
+                <h3 class="mt-3">{{ feature.title }}</h3>
+                <p class="mt-2" style="color: #ffffff">
+                    {{feature.description}}
+                </p>
             </div>
         </div>
+
     </div>
 </section>
