--- a/src/app/landing2/contact/contact.component.html
+++ b/src/app/landing2/contact/contact.component.html
@@ -44,7 +44,7 @@
             <p>Senior Financial Advisor</p>
             <div class="flex align-items-center gap-2 mb-2">
                 <i class="pi pi-envelope"></i>
-                <p>: johndoe&#64;karesinvestments.com</p>
+                <p>: {{email}}</p>
             </div>
             <div class="flex align-items-center gap-2">
                 <i class="pi pi-phone"></i>
