--- a/src/app/landing2/home2/home2.component.html
+++ b/src/app/landing2/home2/home2.component.html
@@ -1,8 +1,15 @@
-<section class="home-container text-center pt-6-rem">
+<section class="home-container text-center">
+    <!-- Banner Section (Starts below navbar) -->
+    <div class="banner">
+        <!-- <div class="banner-content text-center">
+            <h1 class="display-4">Kares Investments for a Secure Future</h1>
+            <p>Your trusted partner in financial growth and stability.</p>
+        </div> -->
+    </div>
     <!-- Hero Section -->
     <div class="hero-section">
-        <h1 class="display-4">Smart Investments for a Secure Future</h1>
-        <p class="lead">Secure, seamless, and innovative financial solutions at your fingertips.</p>
+        <h1 class="display-4">Kares Investments for a Secure Future</h1>
+        <p class="lead typing">Secure, seamless, and innovative financial solutions at your fingertips.</p>
         <button class="btn btn-primary btn-lg m-2" [routerLink]="'/register'">Begin Your Smart Investing</button>
         <button class="btn btn-outline-light btn-lg m-2" [routerLink]="'/about'">Learn More</button>
     </div>
