--- a/src/app/landing2/home2/home2.component.scss
+++ b/src/app/landing2/home2/home2.component.scss
@@ -13,6 +13,46 @@
     padding: 60px;
 }
 
+h1,
+p {
+    animation: fadeZoom 1s ease-out;
+}
+
+@keyframes fadeSlideUp {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.banner {
+    background: url('../../../assets/layout/images/banner4.jpg') no-repeat center center;
+    background-size: cover;
+    height: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-top: 6rem;
+    animation: fadeZoom 1.5s ease-in-out;
+}
+
+@keyframes fadeZoom {
+    from {
+        opacity: 0;
+        transform: scale(1.1);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 
 
 
