added new banner

--- a/src/app/landing2/home2/home2.component.scss
+++ b/src/app/landing2/home2/home2.component.scss
@@ -31,7 +31,7 @@ p {
 }
 
 .banner {
-    background: url('../../../assets/layout/images/banner4.jpg') no-repeat center center;
+    background: url('../../../assets/layout/images/banner7.jpeg') no-repeat center center;
     background-size: cover;
     height: 450px;
     display: flex;
